map view controller designed

--- a/GoodFood/Base.lproj/Main.storyboard
+++ b/GoodFood/Base.lproj/Main.storyboard
@@ -1199,19 +1199,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="D8J-NG-c9I">
-                                <rect key="frame" x="20" y="126" width="374" height="570"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="737"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kHP-Ow-ssB">
-                                <rect key="frame" x="184" y="754" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kHP-Ow-ssB">
+                                <rect key="frame" x="20" y="789" width="374" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="63" id="n2M-Ob-G40"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="btndone:" destination="Qnw-w5-oBF" eventType="touchUpInside" id="Yz3-fM-gLV"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="66d-m3-6r0" firstAttribute="bottom" secondItem="kHP-Ow-ssB" secondAttribute="bottom" constant="10" id="Gu9-Go-WbR"/>
+                            <constraint firstItem="kHP-Ow-ssB" firstAttribute="leading" secondItem="66d-m3-6r0" secondAttribute="leading" constant="20" id="N5x-W9-DLY"/>
+                            <constraint firstItem="66d-m3-6r0" firstAttribute="trailing" secondItem="kHP-Ow-ssB" secondAttribute="trailing" constant="20" id="u8i-L6-Ca6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="66d-m3-6r0"/>
                     </view>
                     <connections>
