--- a/GoodFood/Base.lproj/Main.storyboard
+++ b/GoodFood/Base.lproj/Main.storyboard
@@ -107,8 +107,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BGn-Vz-tFh">
-                                <rect key="frame" x="20" y="157" width="374" height="350"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="20" y="94" width="374" height="536"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OdE-d4-h1v">
                                     <size key="itemSize" width="230" height="250"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -116,14 +116,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="itemCell" id="8u2-co-aLQ" customClass="itemNameCollectionViewCell" customModule="GoodFood" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="itemCell" id="8u2-co-aLQ" customClass="itemNameCollectionViewCell" customModule="GoodFood" customModuleProvider="target">
                                         <rect key="frame" x="72" y="0.0" width="230" height="250"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="230" height="250"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sbl-Wk-FJq">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sbl-Wk-FJq">
                                                     <rect key="frame" x="10" y="10" width="210" height="190"/>
                                                     <rect key="contentStretch" x="1" y="0.0" width="1" height="1"/>
                                                 </imageView>
@@ -133,12 +133,12 @@
                                                         <constraint firstAttribute="height" constant="40" id="nXM-Wj-UQF"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="sbl-Wk-FJq" firstAttribute="trailing" secondItem="fvy-hy-fNG" secondAttribute="trailing" id="Bnd-h1-3KZ"/>
                                             <constraint firstItem="sbl-Wk-FJq" firstAttribute="leading" secondItem="8u2-co-aLQ" secondAttribute="leading" constant="10" id="Ez5-oQ-GGK"/>
@@ -161,32 +161,29 @@
                                 </connections>
                             </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Wo-Et-xUy">
-                                <rect key="frame" x="270" y="600" width="89" height="31"/>
-                                <color key="backgroundColor" systemColor="systemBrownColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="214" y="725" width="180" height="38"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="89" id="Z6L-2b-7DS"/>
+                                    <constraint firstAttribute="width" constant="180" id="O5f-WO-6R4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="Cart">
-                                    <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <state key="normal" title="Cart"/>
                                 <connections>
                                     <action selector="btnViewCart:" destination="y2N-YE-YCf" eventType="touchUpInside" id="0Sw-NW-Yp2"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eNp-Qo-NpP">
-                                <rect key="frame" x="35" y="599" width="100" height="38"/>
-                                <color key="backgroundColor" systemColor="systemBrownColor" red="0.63529411759999999" green="0.51764705879999995" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="20" y="725" width="180" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="qmD-jF-kL2"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="Book Table">
-                                    <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <state key="normal" title="Book Table"/>
                                 <connections>
                                     <action selector="btnBookTable:" destination="y2N-YE-YCf" eventType="touchUpInside" id="Jqs-Sf-tLX"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MA7-h0-5K6" customClass="BadgeSwift" customModule="BadgeSwift">
-                                <rect key="frame" x="347" y="589" width="21" height="21"/>
+                                <rect key="frame" x="347" y="712" width="21" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="j1Z-Nf-JJx"/>
                                     <constraint firstAttribute="width" constant="21" id="pko-px-RUg"/>
@@ -196,18 +193,17 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="BGn-Vz-tFh" firstAttribute="leading" secondItem="YC7-01-9oX" secondAttribute="leadingMargin" id="0bh-f9-Dg6"/>
-                            <constraint firstItem="4Wo-Et-xUy" firstAttribute="top" secondItem="BGn-Vz-tFh" secondAttribute="bottom" constant="93" id="1z8-nS-bWb"/>
-                            <constraint firstItem="eNp-Qo-NpP" firstAttribute="leading" secondItem="Erc-NL-Gqv" secondAttribute="leading" constant="35" id="63a-1O-JZZ"/>
+                            <constraint firstItem="Erc-NL-Gqv" firstAttribute="trailing" secondItem="4Wo-Et-xUy" secondAttribute="trailing" constant="20" id="1d7-5U-k7d"/>
+                            <constraint firstItem="eNp-Qo-NpP" firstAttribute="leading" secondItem="Erc-NL-Gqv" secondAttribute="leading" constant="20" id="Drb-aJ-WmC"/>
+                            <constraint firstItem="Erc-NL-Gqv" firstAttribute="bottom" secondItem="eNp-Qo-NpP" secondAttribute="bottom" constant="50" id="KGd-fI-CVv"/>
                             <constraint firstItem="MA7-h0-5K6" firstAttribute="top" secondItem="BGn-Vz-tFh" secondAttribute="bottom" constant="82" id="KXk-e1-3Sl"/>
-                            <constraint firstItem="eNp-Qo-NpP" firstAttribute="top" secondItem="BGn-Vz-tFh" secondAttribute="bottom" constant="92" id="OOh-6T-RAv"/>
                             <constraint firstItem="BGn-Vz-tFh" firstAttribute="trailing" secondItem="YC7-01-9oX" secondAttribute="trailingMargin" id="SaB-7h-eVM"/>
-                            <constraint firstItem="BGn-Vz-tFh" firstAttribute="top" secondItem="Erc-NL-Gqv" secondAttribute="top" constant="113" id="gXc-5O-caq"/>
-                            <constraint firstItem="Erc-NL-Gqv" firstAttribute="bottom" secondItem="4Wo-Et-xUy" secondAttribute="bottom" constant="182" id="ilX-YD-nie"/>
-                            <constraint firstItem="Erc-NL-Gqv" firstAttribute="trailing" secondItem="4Wo-Et-xUy" secondAttribute="trailing" constant="55" id="imL-9g-WJZ"/>
-                            <constraint firstItem="Erc-NL-Gqv" firstAttribute="bottom" secondItem="MA7-h0-5K6" secondAttribute="bottom" constant="203" id="kkG-Kd-NGh"/>
+                            <constraint firstItem="Erc-NL-Gqv" firstAttribute="bottom" secondItem="4Wo-Et-xUy" secondAttribute="bottom" constant="50" id="gSL-dg-cIs"/>
+                            <constraint firstItem="BGn-Vz-tFh" firstAttribute="top" secondItem="Erc-NL-Gqv" secondAttribute="top" constant="50" id="gXc-5O-caq"/>
+                            <constraint firstItem="Erc-NL-Gqv" firstAttribute="bottom" secondItem="MA7-h0-5K6" secondAttribute="bottom" constant="80" id="kkG-Kd-NGh"/>
                             <constraint firstItem="Erc-NL-Gqv" firstAttribute="trailing" secondItem="MA7-h0-5K6" secondAttribute="trailing" constant="46" id="wxl-Aq-i1h"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Erc-NL-Gqv"/>
@@ -216,6 +212,8 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="BtnBadge" destination="MA7-h0-5K6" id="n9Q-sX-OHM"/>
+                        <outlet property="bookTblBtnLbl" destination="eNp-Qo-NpP" id="8xy-sX-owP"/>
+                        <outlet property="cartBtnLbl" destination="4Wo-Et-xUy" id="lyd-01-KhQ"/>
                         <outlet property="collectionView" destination="BGn-Vz-tFh" id="tjD-x1-vMv"/>
                     </connections>
                 </viewController>
